# guided_tamp_benchmark

./: CITATION.cff  MANIFEST.in  README.md  collisions.py  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  static_code_analysis_and_tests.yml
examples/: 01_create_task.py  01_render_demonstration.py  02_render_demonstration.py  03_benchmarking_script_example.py  03_test_collisions.py  04_visualize_robot_poses.py
guided_tamp_benchmark/benchmark/: __init__.py  benchmark.py  benchmark_result.py
guided_tamp_benchmark/core/: __init__.py  configuration.py  path.py  planner.py
guided_tamp_benchmark/models/: __init__.py  utils.py
guided_tamp_benchmark/models/furniture/: __init__.py  base.py  box.py  shelf.py  table.py  tunnel.py
guided_tamp_benchmark/models/objects/: __init__.py  base.py  cuboid.py  object_ycbv.py  tray.py
guided_tamp_benchmark/models/robots/: base.py  extended_robot.py  kuka_iiwa_robot.py  kuka_kmr_iiwa_robot.py  panda_robot.py  panda_robot_2.py  (+1 more)
guided_tamp_benchmark/scripts/: __init__.py  benchmark.py
guided_tamp_benchmark/tasks/: __init__.py  base_task.py  collisions.py  demonstration.py  renderer.py  shelf_task.py  tunnel_task.py  waiter_task.py
models/: __init__.py  utils.py
models/furniture/: __init__.py  base.py  shelf.py  table.py  tunnel.py
models/objects/: __init__.py  cuboid.py  object_ycbv.py
models/robots/: __init__.py  base.py  kuka_iiwa_robot.py  kuka_kmr_iiwa_robot.py  panda_robot.py  ur5_robot.py
tasks/: __init__.py  base_task.py  demo.py  demonstration.py  dummy_demo.pkl  renderer.py  shelf_task.py
tasks/data/: shelf_0.pkl  shelf_0_panda_robot_poses.pkl
tests/: test_benchmark.py  test_collisions.py  test_configs.pkl  test_demonstration.py  test_imports.py  test_parsers.py
(+124 files in other folders)
