[metadata]
name = guided_tamp_benchmark
version = 1.0.0
license = BSD-2-Clause
description = guidedTAMPbenchmark is a repository that contains a set of tasks for planning algorithms benchmark.
long_description = file: README.md
author = Vladimir Petrik
author_email = vladimir.petrik@cvut.cz

[options]
packages = find:
package_dir =
    = src
include_package_data = True
install_requires =
    numpy

[options.packages.find]
where = src